// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionButton snapshot test render with cancellable false props 1`] = `
<span
  title="Task cannot be canceled"
>
  <ActionButtons
    buttons={
      Array [
        Object {
          "action": Object {
            "disabled": true,
            "onClick": [Function],
          },
          "title": "Cancel",
        },
      ]
    }
  />
</span>
`;

exports[`ActionButton snapshot test render with cancellable true props 1`] = `
<span>
  <ActionButtons
    buttons={
      Array [
        Object {
          "action": Object {
            "disabled": false,
            "onClick": [Function],
          },
          "title": "Cancel",
        },
      ]
    }
  />
</span>
`;

exports[`ActionButton snapshot test render with resumable true props 1`] = `
<span>
  <ActionButtons
    buttons={
      Array [
        Object {
          "action": Object {
            "disabled": false,
            "onClick": [Function],
          },
          "title": "Resume",
        },
      ]
    }
  />
</span>
`;
